Modified readme.md and index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head>
 <title>Tytuł strony</title>
 <meta http-equiv="Content-Type" content="text/html;  charset=iso-8859-2">
-<h1>Hello World</h1>
+<h1>Hello World !!!</h1>
 </head>
 <body>
